<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.auth.RecoverAccountFragment">


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            android:paddingTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recuperar_conta_buttom"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"/>

        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewMensagem"
                android:text="@string/txt_recemail"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewEmail"
                android:text="@string/email"
                android:textColor="@color/white"
                android:layout_marginTop="24dp"/>

            <EditText
                android:id="@+id/edittextEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/insert_email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:layout_marginTop="4dp"
                style="@style/EditTextTheme"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEnviar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_buttom"
                android:layout_marginTop="16dp"
                style="@style/ButtomTheme"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/white"
                android:layout_gravity="center"
                android:id="@+id/progressBar"
                android:layout_marginTop="8dp"
                android:visibility="invisible"
                tools:visibility="visible"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>